src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>ASQ_3_Age__c</fullName>
        <formula>VALUE(TRIM(LEFT(TEXT(BRI_ASQ_3__c ), FIND(&quot; &quot;, TEXT(BRI_ASQ_3__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASQ-3 Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASQ_SE_Due_Date__c</fullName>
        <formula>Person__r.Child_DOB__c +  (BRI_ASQ_SE_Age__c * 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASQ-SE Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Absence_Presence_of_Abuse_of_child__c</fullName>
        <inlineHelpText>Absence / Presence of  Physical Abuse of childrens</inlineHelpText>
        <label>Physical Abuse of childrens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_Presence_of_Domestic_Violence_Be__c</fullName>
        <inlineHelpText>Absence/Presence of Domestic Violence between Parents/Caregivers</inlineHelpText>
        <label>Domestic Violence b/w Parents/Caregivers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_Presence_of_Other_Family_Confli__c</fullName>
        <inlineHelpText>Absence/Presence of Other Family conflict</inlineHelpText>
        <label>Other family conflict</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Activity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Home Visit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Bill__c</fullName>
        <label>Assessment Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Description__c</fullName>
        <label>Assessment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_No__c</fullName>
        <label>Assessment No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Phone__c</fullName>
        <label>Assessment Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Assessment_Probability__c</fullName>
        <label>Assessment Probability</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assessment_Time__c</fullName>
        <label>Assessment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessment_details__c</fullName>
        <label>Assessment details</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_type__c</fullName>
        <label>Assessment type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_ASQ_3_Due_Date__c</fullName>
        <formula>Person__r.Child_DOB__c + (ASQ_3_Age__c  * 30)</formula>
        <label>ASQ-3 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_ASQ_3__c</fullName>
        <label>Test Month ASQ-3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>9 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>30 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_ASQ_SE_Age__c</fullName>
        <formula>VALUE(TRIM(LEFT(TEXT( BRI_ASQ_SE__c ), FIND(&quot; &quot;, TEXT(BRI_ASQ_SE__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASQ-SE Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_ASQ_SE__c</fullName>
        <label>Test Month ASQ-SE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>30 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Acceptance_PR__c</fullName>
        <label>Acceptance-PR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Access_to_Health_Mental_Health_care__c</fullName>
        <inlineHelpText>Family Access to Health/Mental Health Care</inlineHelpText>
        <label>Access to Health/Mental Health care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Access_to_Weapons__c</fullName>
        <inlineHelpText>Absence/Presence of Access to Weapons</inlineHelpText>
        <label>Access to Weapons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home visit</fullName>
                </value>
                <value>
                    <fullName>Drop- by Visit</fullName>
                </value>
                <value>
                    <fullName>Other site visit</fullName>
                </value>
                <value>
                    <fullName>w/ Transportation</fullName>
                </value>
                <value>
                    <fullName>School visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_AlcoholAbuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlcoholAbuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_AlcoholAfterKnownPregnancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlcoholAfterKnownPregnancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Alcohol_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Babbling__c</fullName>
        <label>Babbling</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Baby_Behavior__c</fullName>
        <label>Baby Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Baby_Vision__c</fullName>
        <label>Baby Vision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Baby_too_Quiet__c</fullName>
        <label>Baby too Quiet</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Behavior_Concern__c</fullName>
        <label>Behavior Concern</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Body_Relaxed__c</fullName>
        <label>Body Relaxed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Bonding_with_Children_s__c</fullName>
        <label>Bonding with Children&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Both_Hands_Legs__c</fullName>
        <label>Both Hands Legs</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_CCINumber__c</fullName>
        <displayFormat>CCIN-{0000}</displayFormat>
        <label>CCINumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BRI_COM__c</fullName>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Calm_Down__c</fullName>
        <label>Calm Down</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Calm_Himself__c</fullName>
        <label>Calm Himself</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Caregiver_Employment__c</fullName>
        <label>Caregiver Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Check_To_Make_Sure__c</fullName>
        <label>Check To Make Sure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_Number__c</fullName>
        <label>Child Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Talks__c</fullName>
        <label>Child Talks</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_well_being_Total__c</fullName>
        <formula>CASE(BRI_Overall_Child_Well_Being__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Relation_with_Parents_Caregivers__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_School_Performance__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Cooperation_Motivation_to_Maintain__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Children_s_behavior__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Relationship_with_Peers__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)
+
CASE(BRI_Relationship_with_Siblings__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child well being Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Children_s_Disability__c</fullName>
        <label>Children&apos;s Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Children_s_Mental_Health__c</fullName>
        <label>Children&apos;s Mental Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Children_s_Physical_Health__c</fullName>
        <inlineHelpText>Child(ren)’s Physical Health</inlineHelpText>
        <label>Children’s Physical Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Children_s_behavior__c</fullName>
        <label>Children&apos;s behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Cling_To_You__c</fullName>
        <label>Cling To You</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Communication_with_Childrens__c</fullName>
        <label>Communication with Childrens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Connection_to_Religious_Community__c</fullName>
        <inlineHelpText>Connection to Spiritual/Religious Community</inlineHelpText>
        <label>Connection to Religious Community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Constipated_Diarrhea__c</fullName>
        <label>Constipated Diarrhea</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Cry_Long__c</fullName>
        <label>Cry Long</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Cry_Scream_Tantrum__c</fullName>
        <label>Cry Scream Tantrum</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Delay_ASQ_3__c</fullName>
        <label>Delay ASQ 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Delay_COM__c</fullName>
        <label>Delay COM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Delay_FM__c</fullName>
        <label>Delay FM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Delay_GM__c</fullName>
        <label>Delay GM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Delay_PS__c</fullName>
        <label>Delay PS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>